--- a/latihan-git.html
+++ b/latihan-git.html
@@ -11,5 +11,6 @@
     2. ketikan git add nama_file atau git add .
     3. ketikan git commit -m "komentar"
     4. ketikan git push origin nama_branch -->
+    <p>testing edit</p>
 </body>
 </html>
