--- a/latihan-git.html
+++ b/latihan-git.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <!-- cara upload dari local ke git, sebagai berikut:
-    1. buat file
+    1. buat file/edit file
     2. ketikan git add nama_file atau git add .
     3. ketikan git commit -m "komentar"
     4. ketikan git push origin nama_branch -->
